# cxlog

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: cxlogConfig.cmake
cmake/template/: config.cmake
include/cxlog/: AndroidProvider.hpp  ConsoleProvider.hpp  FileProvider.hpp  GLog.hpp  ILogger.hpp  ILoggerFactory.hpp  ILoggerProvider.hpp  LoggerFactory.hpp  MemoryProvider.hpp  SyslogProvider.hpp  defs.hpp
src/: AndroidProvider.cxx  ConsoleProvider.cxx  FileProvider.cxx  GLog.cxx  LoggerFactory.cxx  MemoryProvider.cxx  SyslogProvider.cxx
test/: CMakeLists.txt  ConsoleProvider.tst.cxx  FileProvider.tst.cxx  GLog.tst.cxx  Logger.tst.cxx  LoggerFactory.tst.cpp  MemoryProvider.tst.cxx
test/mocks/: MockLogger.hpp
